Crash in DEG_graph_on_visible_update when activating scene layer #52454

Closed
opened 2017-08-19 17:13:23 +02:00 by Tom Edwards · 6 comments

System Information
Windows 10 x64

Blender Version
Git latest

Short description of error
The line layers[smd.layer] = bpy.context.scene.layers[smd.layer] = True (where smd.layer is 0) causes a 100% reproducible crash within Blender when the new dependency graph is enabled. There is no crash when the old graph is used instead.

Exact steps for others to reproduce the error

Import any SMD file

Cube.smd

Call stack

>	blender.exe!DEG_graph_on_visible_update(Main * bmain, Scene * scene) Line 354	C++	Symbols loaded.

 	blender.exe!DEG_on_visible_update(Main * bmain, const bool UNUSED_do_time) Line 380	C++	Symbols loaded.
 	blender.exe!DAG_on_visible_update(Main * bmain, const bool do_time) Line 2573	C	Symbols loaded.
 	blender.exe!rna_property_update(bContext * C, Main * bmain, Scene * scene, PointerRNA * ptr, PropertyRNA * prop) Line 1812	C	Symbols loaded.
 	blender.exe!RNA_property_update(bContext * C, PointerRNA * ptr, PropertyRNA * prop) Line 1844	C	Symbols loaded.
 	blender.exe!pyrna_py_to_prop_array_index(BPy_PropertyArrayRNA * self, int index, _object * value) Line 2132	C	Symbols loaded.
 	blender.exe!pyrna_prop_array_ass_subscript(BPy_PropertyArrayRNA * self, _object * key, _object * value) Line 3053	C	Symbols loaded.
 	[Python to Native Transition]		Annotated Frame
 	import_smd.py!setLayer Line 651	Python	Symbols loaded.
 	import_smd.py!readPolys Line 726	Python	Symbols loaded.
 	import_smd.py!readSMD Line 1283	Python	Symbols loaded.
 	import_smd.py!execute Line 73	Python	Symbols loaded.
 	[Native to Python Transition]		Annotated Frame
 	blender.exe!bpy_class_call(bContext * C, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) Line 7644	C	Symbols loaded.
 	blender.exe!rna_operator_execute_cb(bContext * C, wmOperator * op) Line 985	C	Symbols loaded.
 	blender.exe!wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler * handler, int val) Line 1887	C	Symbols loaded.
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2095	C	Symbols loaded.
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2176	C	Symbols loaded.
 	blender.exe!wm_event_do_handlers(bContext * C) Line 2449	C	Symbols loaded.
 	blender.exe!WM_main(bContext * C) Line 507	C	Symbols loaded.
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 529	C	Symbols loaded.

**System Information** Windows 10 x64 **Blender Version** Git latest **Short description of error** The line `layers[smd.layer] = bpy.context.scene.layers[smd.layer] = True` (where `smd.layer` is `0`) causes a 100% reproducible crash within Blender when the new dependency graph is enabled. There is no crash when the old graph is used instead. **Exact steps for others to reproduce the error** - Start Blender with `--enable-new-depsgraph` - Install and activate the [Blender Source Tools ](http://steamreview.org/BlenderSourceTools/) # Import any SMD file [Cube.smd](https://archive.blender.org/developer/F718588/Cube.smd) **Call stack** ``` > blender.exe!DEG_graph_on_visible_update(Main * bmain, Scene * scene) Line 354 C++ Symbols loaded. blender.exe!DEG_on_visible_update(Main * bmain, const bool UNUSED_do_time) Line 380 C++ Symbols loaded. blender.exe!DAG_on_visible_update(Main * bmain, const bool do_time) Line 2573 C Symbols loaded. blender.exe!rna_property_update(bContext * C, Main * bmain, Scene * scene, PointerRNA * ptr, PropertyRNA * prop) Line 1812 C Symbols loaded. blender.exe!RNA_property_update(bContext * C, PointerRNA * ptr, PropertyRNA * prop) Line 1844 C Symbols loaded. blender.exe!pyrna_py_to_prop_array_index(BPy_PropertyArrayRNA * self, int index, _object * value) Line 2132 C Symbols loaded. blender.exe!pyrna_prop_array_ass_subscript(BPy_PropertyArrayRNA * self, _object * key, _object * value) Line 3053 C Symbols loaded. [Python to Native Transition] Annotated Frame import_smd.py!setLayer Line 651 Python Symbols loaded. import_smd.py!readPolys Line 726 Python Symbols loaded. import_smd.py!readSMD Line 1283 Python Symbols loaded. import_smd.py!execute Line 73 Python Symbols loaded. [Native to Python Transition] Annotated Frame blender.exe!bpy_class_call(bContext * C, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) Line 7644 C Symbols loaded. blender.exe!rna_operator_execute_cb(bContext * C, wmOperator * op) Line 985 C Symbols loaded. blender.exe!wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler * handler, int val) Line 1887 C Symbols loaded. blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2095 C Symbols loaded. blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2176 C Symbols loaded. blender.exe!wm_event_do_handlers(bContext * C) Line 2449 C Symbols loaded. blender.exe!WM_main(bContext * C) Line 507 C Symbols loaded. blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 529 C Symbols loaded. ```
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @artfunkel

Added subscriber: @artfunkel

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29

Confirmed.

@Sergey looks like there are some objects in the scene that do not have an id_node (yet?) in the graph… Not sure if this means a bug in depsgraph, or a missing update somewhere?

Confirmed. @Sergey looks like there are some objects in the scene that do not have an id_node (yet?) in the graph… Not sure if this means a bug in depsgraph, or a missing update somewhere?
Sergey Sharybin self-assigned this 2017-08-20 18:11:47 +02:00

This issue was referenced by 1155fc94fd

This issue was referenced by 1155fc94fd1826620c2901e6b36a4020ca88ff69

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52454
No description provided.