Fix T52454: Crash in DEG_graph_on_visible_update when activating scene layer

Most likely needs in 2.79 final release.